<resources>
    <string name="app_name">Anonymous</string>
    <string name="register">register</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="full_name">name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="Anonymous">Anonymous</string>
    <string name="create_new_acc">Create New Account</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="login_here">Login Here</string>
    <string name="don_t_have_an_account">Don\'t Have An Account</string>
    <string name="select_image">Select Image</string>
    <string name="this_is_my_message">This is my Message</string>
</resources>
